# SiE

./: CMakeLists.txt
source/: SiE.h  global.h  includes.h
source/camera/: camera.cpp  camera.h
source/general/: color.cpp  color.h  helpers.cpp  helpers.h  math.cpp  math.h  structures.cpp  structures.h  transform.cpp  transform.h
source/mesh/: mesh.cpp  mesh.h
source/model_loader/: model_loader.cpp  model_loader.h  texture_loader.cpp  texture_loader.h
source/object/: base_object.h  game_object.cpp  game_object.h  internal_use.h
source/opengl_wrappers/: framebuffer.cpp  framebuffer.h  index_buffer.cpp  index_buffer.h  shader.cpp  shader.h  texture.cpp  texture.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
source/window/: window.cpp  window.h
tests/: CMakeLists.txt  tests.cpp
tests/assets/shaders/base_shader/: shader.frag  shader.vert
tests/base_shader/: shader.frag  shader.vert
